# Database

./: Nytt textdokument.txt
Lektion 2/: Databaser_Övning2.docx  Databaser_Övning2.odt  ~$tabaser_Övning2.docx  ~WRL0003.tmp
Lektion 3/: Databaser_Övning3.docx
Lektion 4/: Databaser_Övning4.docx
Lektion 5/: Databaser_Övning5.docx
Lektion 6/: Databaser_Övning6.docx  Databaser_Övning6.odt  Internet-SQL-Course.txt  create.sql  insert.sql  student.sql
Lektion 7/: Databaser_Övning7.docx  ~$tabaser_Övning7.docx
Lektion_8/: Backup.txt  Query for kalle.txt  Test.txt
Lektion_8/Clion-databas/: 08-dt076g-_maro1904_.cpp.cpp  CMakeLists.txt
Lektion_8/Övning8-Windows/: Databaser_Övning8.docx
Lektion_8/Övning8-Windows/DBtest/: DBhandler.cpp  DBhandler.h  DBtest.cpp  DBtest.sln  DBtest.vcxproj  PWinput.cpp  PWinput.h  sportsclub8.sql  winutf8.h
Lektion_8/Övning8-Windows/DBtest/Debug/: DBtest.ilk  DBtest.vcxproj.FileListAbsolute.txt  vc142.idb
Lektion_8/Övning8-Windows/DBtest/Debug/DBtest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DBtest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Lektion_8/Övning8-Windows/DBtest/x64/Debug/: vc142.idb
Lektion_8/Övning8-Windows/DBtest/x64/Debug/DBtest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DBtest.lastbuildstate
Lektion_8/Övning8-Windows/DBtest/x64/Release/DBtest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  (+1 more)
Tenta/: 940219-8130, Marcus Roos - kopia.doc  940219-8130, Marcus Roos.doc  Buss.dia  Databaser_190605.odt  Tabell.docx  read me.txt
